@@ -9,6 +9,7 @@ AllOverIt
   * Updated binary serialization to include extension methods for read/write DateTime and TimeSpan
   * Added CreateToLowerCallExpression() and CreateToUpperCallExpression() to StringExpressionUtils
   * Improvements to LinqSpecificationVisitor output
+  * Removed unnecessary return type from IBreadcrumbs.Add()
 
 
 31 Jul 2022
